<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFCE6">

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="140dp"
        android:layout_height="52dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/comprar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar5"
        app:layout_constraintVertical_bias="0.407"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:background="#303034"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:background="#303034"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="59dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:srcCompat="@drawable/plano_de_fundo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/pedido"
        android:textColor="#FEFCE6"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="0.363" />

    <ImageButton
        android:id="@+id/btnExcluirPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#303034"
        android:contentDescription="@string/liexeiraicone"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/ic_icone_lixeira"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/totallabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="@+id/toolbar5" />

    <TextView
        android:id="@+id/txtValorTotal"
        android:layout_width="117dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="#056d33"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="@+id/toolbar5"
        tools:ignore="TextContrastCheck" />

    <ListView
        android:id="@+id/lstPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="0.018" />
</androidx.constraintlayout.widget.ConstraintLayout>