<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FEFCE6">

    <TextView
        android:id="@+id/txtPrecoUnidadePedido"
        android:layout_width="117dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:text="@string/preco"
        android:textAlignment="center"
        android:textColor="#056d33"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtQuantidadePedido"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/txtDescricaoPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/feijao"
        android:textColor="#303034"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtQuantidadePedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/quantidade"
        android:textColor="#303034"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDescricaoPedido"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/txtRemoverItemPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FEFCE6"
        android:contentDescription="Icone_lixeira"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPrecoUnidadePedido"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icone_lixeira_vermelha" />

    <View
        android:id="@+id/divider2"
        android:layout_width="318dp"
        android:layout_height="1dp"
        android:layout_marginTop="52dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>