<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:background="#303034"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:background="#303034"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/buscar_produto"
        android:minHeight="48dp"
        android:textColor="#FEFCE6"
        android:textColorHighlight="#FEFCE6"
        android:textColorHint="#FEFCE6"
        android:textColorLink="#FEFCE6"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvProdutos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/btnInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90sp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#303034"
        android:contentDescription="@string/inicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/ic_icone_casa"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btnPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="90sp"
        android:backgroundTint="#303034"
        android:contentDescription="@string/pedido"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/ic_icone_pedido"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/lblInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:textColor="#FEFCE6"
        android:labelFor="@+id/btnInicio"
        app:layout_constraintBottom_toBottomOf="@+id/btnInicio"
        app:layout_constraintEnd_toEndOf="@+id/btnInicio"
        app:layout_constraintStart_toStartOf="@+id/btnInicio" />

    <TextView
        android:id="@+id/lblPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/btnPedido"
        android:text="@string/pedido"
        android:textColor="#FEFCE6"
        app:layout_constraintBottom_toBottomOf="@+id/btnPedido"
        app:layout_constraintEnd_toEndOf="@+id/btnPedido"
        app:layout_constraintStart_toStartOf="@+id/btnPedido" />

</androidx.constraintlayout.widget.ConstraintLayout>